--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="card">
         <h3>Compare AI Tools (UMN)</h3>
         <p>University‑licensed tools at a glance.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://it.umn.com/services-technologies/comparisons/compare-ai-tools">View comparison</a>
+        <a class="btn" target="_blank" rel="noopener" href="https://it.umn.edu/services-technologies/comparisons/compare-ai-tools">View comparison</a>
       </div>
       <div class="card">
         <h3>Direct links</h3>
@@ -246,6 +246,16 @@
         <h3>AI Community of Practice</h3>
         <p>Join the systemwide UMN AI‑COP to share HR use cases that meet policy.</p>
         <a class="btn" target="_blank" rel="noopener" href="https://it.umn.edu/navigating-ai-umn">Join</a>
+      </div>
+		 <div class="card">
+        <h3>An Instructor’s Guide to AI Literacy</h3>
+        <p>Enroll in the Center for Educational Innovation's course on AI literacy for instructors.</p>
+        <a class="btn" target="_blank" rel="noopener" href="https://training.umn.edu/courses/31766">Join</a>
+      </div>
+		<div class="card">
+        <h3>AI Literacy for HR Professionals</h3>
+        <p>Coming soon - OHR's AI literacy course for HR Professionals.</p>
+        <a class="btn" target="_blank" rel="noopener" href="#">Coming Soon</a>
       </div>
     </div>
   </section>
