--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 		 <div class="card">
         <h3>An Instructor’s Guide to AI Literacy</h3>
         <p>Enroll in the Center for Educational Innovation's course on AI literacy for instructors.</p>
-        <a class="btn" target="_blank" rel="noopener" href="https://training.umn.edu/courses/31766">Join</a>
+        <a class="btn" target="_blank" rel="noopener" href="https://training.umn.edu/courses/31766">Enroll</a>
       </div>
 		<div class="card">
         <h3>AI Literacy for HR Professionals</h3>
