--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
   <div class="container">
     <div class="footer-links">
       <p><strong>Related policies and resources:</strong> <a target="_blank" rel="noopener" href="https://it.umn.edu/navigating-ai-umn">Navigating AI @ UMN</a> · <a target="_blank" rel="noopener" href="https://it.umn.edu/services-technologies/resources/artificial-intelligence-appropriate-use">Appropriate Use of Generative AI</a> · <a target="_blank" rel="noopener" href="https://it.umn.edu/services-technologies/good-practices/know-your-data-how-protect-university">Data Security Classification</a> · <a target="_blank" rel="noopener" href="https://it.umn.edu/about-us/report-information-security-issues">Report Information Security Issues</a> · <a target="_blank" rel="noopener" href="https://it.umn.edu/services-technologies/comparisons/compare-ai-tools">Compare AI Tools</a></p>
-      <p class="version">Maintained by OHR with OIT, EO/Title IX, Procurement, UR, RIO · Last updated: <span id="last-updated"></span></p>
+      <p class="version">Maintained by OHR with OIT, EOT, University Relations · Last updated: <span id="last-updated"></span></p>
     </div>
   </div>
   <script>document.getElementById('last-updated').textContent = new Date().toLocaleDateString();</script>
