--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
         </ul>
       </div>
       <div class="card">
-        <h3>HR Operations / Records</h3>
+        <h3>HR Operations</h3>
         <ul>
-          <li><span class="badge low" title="Low risk: public or de-identified content only">● Low</span> &nbsp; Draft knowledge‑base articles and how‑tos; records staff review prior to publishing.</li>
+          <li><span class="badge low" title="Low risk: public or de-identified content only">● Low</span> &nbsp; Draft knowledge‑base articles and job aids <em>(</em>HR/Payroll staff review prior to publishing or sharing)</em>; Summarize long emails for quick reading (no private data in unapproved tools).</li>
           <li><span class="badge high" title="High risk: not permitted without special approval">● High</span> &nbsp; Transcribe/summarize confidential meetings in unapproved tools.</li>
         </ul>
       </div>
