--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
   <section class="section">
     <h2 class="anchor" id="use-cases">HR use cases by domain</h2>
-	  <p class="small">Risk levels <strong>(<span style="color:green">Low</span>/<span style="color:#C2622B">Medium</span>/<span style="color:red">High</span></strong>) guide caution and required approvals. Human review is always required.</p>
+	  <p class="small">Risk levels <strong>(<span style="color:green">Low</span>/<span style="color:#C2622B">Medium</span>/<span style="color:red">High</span></strong>) guide caution and required approvals. Human review is always required. For Medium and High risk activities, document how you reviewed and approved the final product. (Use <a href='#templates'>TA-001</a>).</p>
 
     <div class="grid grid-2">
       <div class="card">
@@ -155,7 +155,7 @@
     <h2 class="anchor" id="templates">Templates & checklists</h2>
     <table class="table">
       <thead>
-        <tr><th>Template</th><th>Purpose</th><th>Download</th></tr>
+        <tr><th>Template</th><th>Purpose</th><th>&nbsp;</th></tr>
       </thead>
       <tbody>
         <tr>
