--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <h3>Incident &amp; redress</h3>
         <ul>
           <li>Suspect bias, privacy risk, or misuse? <a target="_blank" rel="noopener" href="https://it.umn.edu/about-us/report-information-security-issues">Report Information Security Issues</a>.</li>
-          <li>Discrimination/harassment concerns? Report to EO/Title IX.</li>
+          <li>Discrimination/harassment concerns? <a href="https://eot.umn.edu/report-misconduct">Report to EO/Title IX</a> </li>
         </ul>
       </div>
     </div>
